virt01/manual/mail/relayer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relayer-svc
  namespace: mail
spec:
  selector:
    app: relayer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
